--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                   <div class="flex justify-between w-full items-center">
                     <div class="flex items-start gap-3">
                       <img
-                        src="/Users/maajidzargar/Desktop/weather.png"
+                        src="https://drive.google.com/file/d/10Fi0-hgeAfwtq0tFAC28Qexe-2sxL_nE/view"
                         class="w-16 h-16 -ml-2"
                       />
                       <div>
